--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,11 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://Priyanshu:your-password@cluster0.tdo2ag0.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
